--- a/Aprendizaje automático relacional.ipynb
+++ b/Aprendizaje automático relacional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "ee18b7d5-97f9-4b73-a2d5-eb29ea32fa71",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "23332b31-84d5-4bec-9c6a-86264353fc23",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "3841cc82-9073-4b50-abc7-b57dffa83530",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "4    N'astirh             Madelyne Pryor"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d61a98af-e23a-422f-8bba-fdac630d9534",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "4      0  Magik (Illyana Rasputin)     1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "d3853418-9595-4968-adc5-85315db32bd9",
    "metadata": {},
    "outputs": [],
@@ -201,52 +201,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Métricas relacionales para cada nodo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "81823eb7-0a7a-4454-8ff5-58ee14323e97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degree=nx.degree(G)\n",
+    "triangles=nx.triangles(G)\n",
+    "degree_centrality= nx.degree_centrality(G)\n",
+    "closeness_centrality = nx.closeness_centrality(G)\n",
+    "betweenness_centrality = nx.betweenness_centrality(G)\n",
+    "eigenvector_centrality = nx.eigenvector_centrality(G)\n",
+    "clustering = nx.clustering(G)\n",
+    "print(degree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "863ed5a9-e4ab-496c-ba0a-e04e4f152016",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({2: 30, 3: 11, 4: 5, 5: 4, 6: 3, 7: 1, 181: 1, 11: 1})\n"
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "\n",
-    "tam = Counter(len(c) for c in nx.connected_components(G))\n",
-    "\n",
-    "print(tam)\n"
+    "degreeL= [v for v in degree]\n",
+    "degree = list(degree.values())\n",
+    "degree_centralityL = [degree_centrality[v['id']] for _,v in vertices.iterrows()]\n",
+    "closeness_centralityL = [closeness_centrality[v['id']] for _,v in vertices.iterrows()]\n",
+    "betweenness_centralityL = [betweenness_centrality[v['id']] for _,v in vertices.iterrows()]\n",
+    "eigenvector_centralityL =[eigenvector_centrality[v['id']] for _,v in vertices.iterrows()]\n",
+    "clusteringL = [clustering[v['id']] for _,v in vertices.iterrows()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear el dataframe con los datos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "863ed5a9-e4ab-496c-ba0a-e04e4f152016",
+   "execution_count": 1,
+   "id": "6bef25f5-c35b-4799-9717-8412578b733d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Counter({1: 194, 0: 121, 2: 35})"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df = \u001b[43mpd\u001b[49m.DataFrame({\u001b[33m'\u001b[39m\u001b[33mdegree\u001b[39m\u001b[33m'\u001b[39m:degree, \u001b[33m'\u001b[39m\u001b[33mtriangles\u001b[39m\u001b[33m'\u001b[39m:triangles, \u001b[33m\"\u001b[39m\u001b[33mdegree_centrality\u001b[39m\u001b[33m\"\u001b[39m:degree_centrality,\n\u001b[32m      2\u001b[39m                   \u001b[33m'\u001b[39m\u001b[33mcloseness_centrality\u001b[39m\u001b[33m'\u001b[39m:closeness_centrality, \u001b[33m'\u001b[39m\u001b[33mbetweenness_centrality\u001b[39m\u001b[33m'\u001b[39m:betweenness_centrality,\n\u001b[32m      3\u001b[39m                     \u001b[33m'\u001b[39m\u001b[33meigenvector_centrality\u001b[39m\u001b[33m'\u001b[39m:eigenvector_centrality,\u001b[33m'\u001b[39m\u001b[33mclustering\u001b[39m\u001b[33m'\u001b[39m:clustering,\u001b[33m'\u001b[39m\u001b[33mgroup\u001b[39m\u001b[33m'\u001b[39m:vertices[\u001b[33m'\u001b[39m\u001b[33mgroup\u001b[39m\u001b[33m'\u001b[39m]})\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
-    "Counter(v['group'] for _,v in vertices.iterrows())"
+    "df = pd.DataFrame({'degree':degree, 'triangles':triangles, \"degree_centrality\":degree_centrality,\n",
+    "                  'closeness_centrality':closeness_centrality, 'betweenness_centrality':betweenness_centrality,\n",
+    "                    'eigenvector_centrality':eigenvector_centrality,'clustering':clustering,'group':vertices['group']})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bef25f5-c35b-4799-9717-8412578b733d",
+   "id": "cfa81889",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
