--- a/Aprendizaje automático relacional.ipynb
+++ b/Aprendizaje automático relacional.ipynb
@@ -16,6 +16,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ebce5df2",
+   "metadata": {},
+   "source": [
+    "Primero, vamos a cargar los datos de los nodos y las aristas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "23332b31-84d5-4bec-9c6a-86264353fc23",
@@ -1687,7 +1695,18 @@
    "cell_type": "markdown",
    "id": "f6d5ace1",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h1>KNN (K-Nearest Neighbors)<h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ed6c797",
+   "metadata": {},
+   "source": [
+    "Este algoritmo realiza una predicción a partir del valor de sus k instancias más cercanas. En este caso, utilizaremos la distancia euclidea para medir la distacia entre las instancias.\n",
+    "Usaremos una validación cruzada estratificada con 10 particiones."
+   ]
   },
   {
    "cell_type": "code",
@@ -2202,6 +2221,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56c8eab8",
+   "metadata": {},
+   "source": [
+    "Ahora vamos comprobar los resultados, para ello buscamos el mejor modelo encontrado en la busqueda de hiperparametros. Para ver los resultados utilizaremos la función classification_report() que nos muestra un reporte detallado con los datos que nos interesan, en esta celda lo haremos con el conjunto de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "60fc4fab",
@@ -2229,6 +2256,14 @@
     "modelo_knn=búsqueda_en_rejilla.best_estimator_\n",
     "print(accuracy_score(objetivo_prueba,modelo_knn.predict(atributos_prueba)))\n",
     "print(classification_report(objetivo_prueba,modelo_knn.predict(atributos_prueba)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0503ad46",
+   "metadata": {},
+   "source": [
+    "En esta celda imprimiremos el reporte del conjunto de entrenamiento. "
    ]
   },
   {
